[package]
name = "rsa_zkps_impl"
version = "0.1.0"
edition = "2018"

[lib]
name = "rsazkps"
path = "src/lib.rs"

[[bin]]
name = "rsazkpsbin"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
zk-paillier = "0.4.0"
primes = "0.3.0"
bellman_ce = "0.3"
bellman-bignat = { git = "https://github.com/alex-ozdemir/bellman-bignat", version = "0.1.0" }
sapling-crypto_ce = "0.1.3" #{ package = "sapling-crypto_ce", git = "https://github.com/alex-ozdemir/sapling-crypto", branch = "bls12-poseidon" }
pairing_ce = "0.26.0"


[dependencies.curv]
package = "curv-kzen"
version = "0.7"
default-features = false

[dependencies.paillier]
package = "kzen-paillier"
version = "0.4"
default-features = false

[dev-dependencies]
criterion = "0.3.5"


[[bench]]
name = "allbench"
harness = false
