[package]
name = "rsa_zkps_impl"
version = "0.1.0"
edition = "2021"

[lib]
name = "rsazkps"
path = "src/lib.rs"

[[bin]]
name = "rsazkpsbin"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
get-size = "0.1.2"
get-size-derive = "0.1.2"
derive_more = "0.99.17"
num = "0.4.0"
atomic-counter = "1.0.1"
rand = "0.8"
lazy_static = "1.4.0"
itertools = "0.10.3"
rug = "1.13.0"
zk-paillier = "0.4.0"
serde = { version = "1.0.130", features = ["derive"] }
rmp-serde = "1.1.1"
algebraics = "0.3.0"
num-bigint = { version = "0.4.3", features = ["rand"]}
primes = "0.3.0"
blake2 = "0.9.1"
either = "1.6.1"
# EXACTLY the same version as used by bellman-bignat. Reexports bellman_ce 0.3.3 and pairing_ce 0.20.0
sapling-crypto_ce = { package = "sapling-crypto_ce", git = "https://github.com/alex-ozdemir/sapling-crypto", branch = "bls12-poseidon", version = "0.1.2" }
bellman-bignat = { git = "https://github.com/alex-ozdemir/bellman-bignat", version = "0.1.0" }


[dependencies.curv]
package = "curv-kzen"
version = "0.7"
default-features = false

[dependencies.paillier]
package = "kzen-paillier"
version = "0.4"
default-features = false

[dev-dependencies]
criterion = "0.3.5"


[[bench]]
name = "allbench"
harness = false
